# notarkiv

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  backlog.md  docker-compose.yml  pyproject.toml
app/: auth.py  cli.py  config.py  db.py  deps.py  logging_setup.py  main.py  middleware.py  seed.py  templates_setup.py
app/models/: __init__.py  app_setting.py  inventory.py  inventory_check.py  kiosk.py  loan.py  loan_batch.py  person.py  piece.py  piece_image.py  piece_list.py  piece_user_note.py  psalm.py  publisher.py  scan_session.py  scan_session_image.py  storage.py  storage_unit_image.py  tag.py  user.py
app/routes/: auth.py  help.py  inventory.py  kiosk_inventory.py  lists.py  loans.py  pages.py  people.py  pieces.py  publishers.py  scan.py  storage.py  tags.py
app/services/: app_settings.py  duplicates.py  inventory.py  musicbrainz.py  people.py  publishers.py  storage.py  wikidata.py
app/tasks/: __init__.py  ocr_jobs.py  person_jobs.py  worker.py
app/templates/: _macros.html  base.html
app/utils/: countries.py  dates.py  images.py  languages.py  ratelimit.py
docs/: backup.md  datamodell.md  musicbrainz.md  musikerbeskrivning.md  ocr-strategi.md  permissions.md  postgres-migration.md  seed-data.md  ux-audit.md
scripts/: backup.sh  fetch_kyrkoaret.py  install-static-assets.sh  restore.sh  smoke.py
seed_data/: kyrkoaret.yaml  tags.yaml  unit_kinds.yaml
tests/: conftest.py  test_kiosk_qr.py  test_loans_flow.py  test_person_enrichment.py  test_placements.py  test_review_fixes.py  test_tags_hierarchy.py  test_wikidata.py
(+103 files in other folders)
