[project]
name = "notarkiv"
version = "0.1.0"
description = "Webbapp för att katalogisera ett notförråd via mobilskanning"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2",
    "pydantic-settings>=2.6",
    "bcrypt>=4.2",
    "pillow>=11.0",
    "pytesseract>=0.3.13",
    "anthropic>=0.69",
    "httpx>=0.28",
    "arq>=0.26",
    "redis>=5.2",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "typer>=0.15",
    "rapidfuzz>=3.10",
    "qrcode[pil]>=8.0",
    "babel>=2.16",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
sentry = ["sentry-sdk[fastapi]>=2.19"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "factory-boy>=3.3",
    "ruff>=0.7",
]

[project.scripts]
notarkiv = "app.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
